# cse344-system-programming

./: CMakeLists.txt  README.md
Final Project/: .~lock.bigData.csv#  .~lock.data.csv#  .~lock.try.csv#  .~lock.water.csv#  Makefile  README.md  a.out  akif  client  client.c  example  example2  helper.c  helper.h  helper.h.gch  linked_list.c  linked_list.h  logFile  queue.c  queue.h  run.sh  server  server.c  sql_engine.c  sql_engine.h  valgrind-out.txt
Final Project/source/code/: Makefile  linked_list.c  linked_list.h  queue.c  sql_engine.c  (+1 more)
HW1/: Makefile  README.md  a.out  helper.c  helper.h  linked_list.c  linked_list.h  main.c  myFind  search  search.c  search.h  valgrind-out.txt
HW1/Report/: Report.aux  Report.fdb_latexmk  Report.fls  Report.tex
HW2/: Makefile  README.md  a.out  helper.c  helper.h  lagrance.c  lagrange.c  lagrange.h  main.c  processM  valgrind-out.txt
HW3/: Makefile  README.md  example  execute.sh  helper.c  helper.h  main  main.c  peer  peer.c  player  run.sh  valgrind-out.txt  valgrind-out2.txt  zombie.txt
HW3/Report/: Report.aux  Report.tex
HW4/: Makefile  README.md  a.out  example  helper.c  helper.h  main.c  program  queue.c  run.sh  valgrind-out.txt
HW4/Report/: Report.aux  Report.fdb_latexmk  Report.fls  Report.tex
Midterm Project/: Makefile  README.md  Report.aux  Report.fdb_latexmk  Report.fls  a.out  helper.c  helper.h  main.c  main.h  program  run.sh  script.sh  valgrind-out.txt
Midterm Project/Report/: Report.aux  Report.fdb_latexmk  Report.tex
Report Template/: Report.aux  Report.tex
Simple Examples/: README.md
Simple Examples/Project2/: main.c  mytest.c
Simple Examples/data_structures/: c_queue.c  c_queue.h  linked_list.c  linked_list.h
Simple Examples/directory/: main.c  main2.c  signal.h  test3.c
Simple Examples/final/: client.c  hash.c  list.c  list.h
Simple Examples/fork/: print.c
Simple Examples/list/: Makefile  list.c  sql.h  test.c
Simple Examples/lseek/: main.h
Simple Examples/memset/: main.c
Simple Examples/mid/: main.c  remove.c
Simple Examples/read/: readline.c  test.c
Simple Examples/signal/: helper.c  mask2.c  mymask2.c  mymask4.c  mymask7.c  mymask9.c  runnable.c  test.c
Simple Examples/sql/: Makefile  sql_engine.c  sql_engine.h
Simple Examples/stat/: main.c
Simple Examples/test/: Makefile  main.c  test.c
Simple Examples/threads/: Makefile  linked_list.c  linked_list.h  test.c
Start/: README.md  a.out  header.h  main  main.c  valgrind.txt
Start/Project2/: a.out  main.c  test.c
Start/client_server/: server.c
Start/data_structures/: a.out  linked_list  linked_list.c  linked_list.h  queue.h  valgrind-out.txt
Start/directory/: a.out  main.c  main2.c  signal.h  test.c  test2.c  test3.c
Start/error/: a.out  main.c  print.c  test.py
Start/final/: Makefile  a.out  akif  example  hash.h  input.csv  queue.c  queue.h  run.sh  test  test.c  test2.c
Start/fork/: Makefile  main1.c  print.h  run
Start/list/: Makefile  Zealand.csv  akif  list.c  list.h  nat.csv  sql.c  sql.h  test.c  valgrind-out.txt  water.csv
Start/lseek/: Makefile  driver.c  input.txt  main.h  output.txt  run.sh
Start/memory/: exec.sh  run  test.c
Start/memset/: a.out
Start/mid/: a.out  main.c  rem  remove.c  sender
Start/read/: a.out  client  client.c  read  readline.c  run  sender  server.c
Start/signal/: a.out  main.c  mask.c  mask3.c  mymask.c  mymask10.c  mymask3.c  mymask5.c  mymask6.c  mymask8.c
Start/sql/: akif  valgrind-out.txt
Start/stat/: a.out  main.c  test.c  test2.c  test3.c
Start/test/: Makefile  a.out  malikilic  malikilic.cpp  program
Start/threads/: Makefile  a.out  main.c  program  test.c  valgrind-out.txt
(+19 files in other folders)
